# voice-assistant-demo

./: readme.md  seaplane_request.py  server.py
front_end/: index.html
sea_ri/: .gitignore  pyproject.toml
sea_ri/sea_ri/: DAG_RAG.py  DAG_seari.py  TASK_RAG_stocks.py  TASK_RAG_weather.py  TASK_brewery.py  TASK_category_post_processing.py  TASK_dummy.py  TASK_post_rag.py  TASK_quick_answer_prepro.py  TASK_stt_pre_processing.py  TASK_tts_post_processing.py  TASK_tts_pre_processing.py  main.py
