[tool.poetry]
name = "sea_ri"
version = "0.0.1"
description = ""
authors = []

[tool.seaplane]
main = "main.py"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seaplane = "0.6a42"
geopy= "2.4.1"
openai="0.27.10"
boto3="1.34.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
